Amend h tag for .statement to ensure sequential, amend input label for 'name' on form (had not been updated from old version 'first-name'), and increase radio button size for better usability on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -417,6 +417,11 @@ input[radio] {
     margin: 0 auto;
 }
 
+.radio {
+    height: 20px;
+    width: 20px;
+}
+
 textarea {
     height: 150px;
     padding: 10px 20px;
